// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`features/metadata-based-view/IconWithTooltip should get IconClose with Tooltip having text "cancel" 1`] = `
<Tooltip
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={false}
  position="top-center"
  text={
    Object {
      "defaultMessage": "Cancel",
      "id": "be.cancel",
    }
  }
  theme="default"
>
  <PlainButton
    className="bdl-MetadataBasedItemList-cell--cancelIcon"
    onClick={[Function]}
    type="button"
  >
    <IconClose
      color="#767676"
      height={16}
      width={16}
    />
  </PlainButton>
</Tooltip>
`;

exports[`features/metadata-based-view/IconWithTooltip should get IconPencil with Tooltip having text "edit" 1`] = `
<Tooltip
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={false}
  position="top-center"
  text={
    Object {
      "defaultMessage": "Edit",
      "id": "be.editLabel",
    }
  }
  theme="default"
>
  <PlainButton
    onClick={[Function]}
    type="button"
  >
    <IconPencil
      color="#767676"
    />
  </PlainButton>
</Tooltip>
`;

exports[`features/metadata-based-view/IconWithTooltip should get IconSave with Tooltip having text "save" 1`] = `
<Tooltip
  constrainToScrollParent={false}
  constrainToWindow={true}
  isDisabled={false}
  position="top-center"
  text={
    Object {
      "defaultMessage": "Save",
      "id": "be.save",
    }
  }
  theme="default"
>
  <Button
    className="bdl-MetadataBasedItemList-cell--saveIcon"
    isLoading={false}
    onClick={[Function]}
    showRadar={false}
    type="button"
  >
    <IconCheck
      color="#767676"
      height={16}
      width={16}
    />
  </Button>
</Tooltip>
`;
